修改数据库配置

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,8 +1,12 @@
 #mysql connection
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/ubao?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
-jdbc.username=root
-jdbc.password=root
+#jdbc.url=jdbc:mysql://localhost:3306/ubao?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
+#jdbc.username=root
+#jdbc.password=root
+
+jdbc.url=jdbc:mysql://192.168.1.5:3306/ubao?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
+jdbc.username=zzia309
+jdbc.password=yanghui123
 
 # Properties that control the population of schema and data for a new data source
 jdbc.initLocation=classpath:db/initDB.sql
