--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -6,7 +6,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 
 jdbc.url=jdbc:mysql://192.168.1.5:3306/ubao?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
 jdbc.username=zzia309
-jdbc.password=yanghui123
+jdbc.password=mypassword
 
 # Properties that control the population of schema and data for a new data source
 jdbc.initLocation=classpath:db/initDB.sql
