--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,8 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	
+	
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -41,5 +43,9 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<!-- <listener>
+        <listener-class>com.ibao.dispatch.DispatchListener</listener-class>
+    </listener> -->
 	
 </web-app>
